--- a/provider_server/templates/components/provider_sidebar.html
+++ b/provider_server/templates/components/provider_sidebar.html
@@ -9,17 +9,6 @@
         list-style: none;
     }
 
-    /* 사이드바 스타일 */
-    /* .sidebar {
-        width: 250px;
-        height: 100vh;
-        background-color: #343a40;
-        position: fixed;
-        top: 0;
-        left: 0;
-        overflow-y: auto;
-        transition: width 0.3s ease;
-    } */
 
     /* 메뉴 스타일 */
     .nav-menu {
@@ -108,7 +97,7 @@
     <ul class="nav-menu">
         <ul>
             <li><a href="{% url 'dashboard' %}">홈</a></li>
-            <li><a href="{% url 'provider_estimate_list' %}">받은 견적</a></li>
+            <li><a href="{% url 'received_estimates' %}">받은 견적</a></li>
             <li><a href="#">1:1 견적</a></li>
             <li><a href="#">채팅</a></li>
         </ul>
