--- a/provider_server/templates/components/provider_sidebar.html
+++ b/provider_server/templates/components/provider_sidebar.html
@@ -97,7 +97,7 @@
     <ul class="nav-menu">
         <ul>
             <li><a href="{% url 'dashboard' %}">홈</a></li>
-            <li><a href="{% url 'received_estimates' %}">받은 견적</a></li>
+            <li><a href="{% url 'provider_estimate_list' %}">받은 견적</a></li>
             <li><a href="#">1:1 견적</a></li>
             <li><a href="#">채팅</a></li>
         </ul>
